Fix notification overflow

--- a/mon-pix/app/styles/components/_levelup-notif.scss
+++ b/mon-pix/app/styles/components/_levelup-notif.scss
@@ -1,6 +1,6 @@
 .levelup {
   display: flex;
-  position: absolute;
+  position: fixed;
   top: 10px;
   right: 10px;
   width: 362px;
